[gd_scene load_steps=5 format=2]

[ext_resource path="res://Games/Crafting/Smelt.gd" type="Script" id=1]
[ext_resource path="res://assets/Furnace.png" type="Texture" id=2]
[ext_resource path="res://assets/mine/workshop.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 66.2018, 34.2474 )

[node name="Smelt" type="Node2D"]
script = ExtResource( 1 )

[node name="workshop" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="Furnace" type="Sprite" parent="."]
position = Vector2( 505.191, 143.228 )
texture = ExtResource( 2 )

[node name="OreSpawn" type="Node2D" parent="."]
position = Vector2( 1059.86, 521.922 )

[node name="OreStop" type="Node2D" parent="."]
position = Vector2( 106.836, 520.8 )

[node name="FurnaceEntry" type="Node2D" parent="."]
position = Vector2( 506.23, 214.39 )

[node name="ThrowWindow" type="Area2D" parent="."]
position = Vector2( 509.598, 517.455 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ThrowWindow"]
position = Vector2( 2.245, -1.1225 )
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
